--- a/_posts/2015-07-20-les-guns.md
+++ b/_posts/2015-07-20-les-guns.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Les Guns"
+title:  "Guns N' Roses"
 date:   2015-07-20 10:00:00
 authors: 
   - Joe Gantdelaine
@@ -8,7 +8,8 @@ tags:
   - encyclopédie approximative
 cover: http://s3-eu-west-1.amazonaws.com/org.deadrooster.blog/les-guns.jpg
 description: >
-  La description
+  Il voulait rester femme, qu'importe le lieu, Manhattan ou Kaboul… Voici l'histoire peu banale d'Axl, 
+  le chantre du bon goût Hard FM
 uuid: 65CE2F38-40A2-4D4B-8480-31A7E08CDB09
 ---
 
