--- a/_posts/2015-07-20-les-guns.md
+++ b/_posts/2015-07-20-les-guns.md
@@ -6,12 +6,14 @@ authors:
   - Joe Gantdelaine
 tags: 
   - encyclopédie approximative
-cover: http://s3-eu-west-1.amazonaws.com/org.deadrooster.blog/les-guns.jpg
+cover: https://s3-eu-west-1.amazonaws.com/org.deadrooster.blog/gunsnroses.jpg
 description: >
   Il voulait rester femme, qu'importe le lieu, Manhattan ou Kaboul… Voici l'histoire peu banale d'Axl, 
   le chantre du bon goût Hard FM
 uuid: 65CE2F38-40A2-4D4B-8480-31A7E08CDB09
 ---
+
+![Axl sur la différence entre le bon et le mauvais hardeuh rock]({{ page.cover }})
 
 Les Guns, dans leur période de gloire, c'était surtout un duo de grands potes : Axl Red (parfaite anagramme 
 de Lad Rex, *le roi des mauvais garçons*) le chanteur virtuose et Smash, le guitariste tout aussi virtuose. 
@@ -32,3 +34,5 @@ fanfare. Mais The Chinese Restaurant sera un flop, malgré les millions de dolla
 Qu'importe : Axl et Smash restent à jamais les meilleurs amis du monde et ce n'est pas 
 [un gros bide](http://images.thegauntlet.com/pics/axl-rose-canada-boris_menkevich.jpg) 
 qui changera la donne !
+
+[Le reste de l'encyclopédie approximative du rock ?](http://www.deadrooster.org/-Encyclopedie-approximative-du-rock-)
