Added Joe's Comment

--- a/_posts/2015-07-20-les-guns.md
+++ b/_posts/2015-07-20-les-guns.md
@@ -9,7 +9,7 @@ tags:
 cover: https://s3-eu-west-1.amazonaws.com/org.deadrooster.blog/gunsnroses.jpg
 description: >
   Il voulait rester femme, qu'importe le lieu, Manhattan ou Kaboul… Voici l'histoire peu banale d'Axl, 
-  le chantre du bon goût Hard FM
+  le chantre du bon goût Hard FM (quel bel oxymore)
 uuid: 65CE2F38-40A2-4D4B-8480-31A7E08CDB09
 ---
 
