--- a/_posts/2015-07-20-les-guns.md
+++ b/_posts/2015-07-20-les-guns.md
@@ -21,7 +21,7 @@ Chevelures bien dégagées autour des oreilles, chapeau melon (pour Smash) et su
 (jamais de cuir, halte au mauvais goût !), les Guns'n Roses avait un look aussi sobre que leur musique.
 
 Énorme groupe des années charnières 80/90, tout leur est offert. Mais leurs exigences artistiques font qu'ils 
-refuseront bon nombre de propositions. Ils ne composeront la B.O. que d'un film : *Armaggedon*. Ils ne
+refuseront bon nombre de propositions. Ils ne composeront la B.O. que d'un film : *Armageddon*. Ils ne
 daigneront adapter en anglais qu'un grand classique. Ce sera (cocorico !) celle du fameux morceau d'Hugues 
 Aufray *Knock Knock Ouvre-Toi Porte d'Or* (que reprendra à son tour, excusez du peu, le grand Bob Dylan).
 
