--- a/_posts/2015-07-20-les-guns.md
+++ b/_posts/2015-07-20-les-guns.md
@@ -18,7 +18,8 @@ uuid: 65CE2F38-40A2-4D4B-8480-31A7E08CDB09
 Les Guns, dans leur période de gloire, c'était surtout un duo de grands potes : Axl Red (parfaite anagramme 
 de Lad Rex, *le roi des mauvais garçons*) le chanteur virtuose et Smash, le guitariste tout aussi virtuose. 
 Chevelures bien dégagées autour des oreilles, chapeau melon (pour Smash) et surtout pas de bottes de cuir 
-(jamais de cuir, halte au mauvais goût !), les Guns'n Roses avait un look aussi sobre que leur musique.
+(jamais de cuir, halte au mauvais goût !), les Guns&nbsp;N'&nbsp;Roses avait un look aussi sobre que 
+leur musique.
 
 Énorme groupe des années charnières 80/90, tout leur est offert. Mais leurs exigences artistiques font qu'ils 
 refuseront bon nombre de propositions. Ils ne composeront la B.O. que d'un film : *Armageddon*. Ils ne
@@ -29,7 +30,7 @@ Aufray *Knock Knock Ouvre-Toi Porte d'Or* (que reprendra à son tour, excusez du
 la gloire du groupe. Malheureusement, la sobriété de leurs tenues n'ayant d'égale que la tranquillité de leurs
 vies, le groupe implose en pleine gloire, rattrapé par les envies des uns et des autres de fonder un foyer 
 stable, avec femme, enfants, chiens et spaghettis à tous les repas. 15 ans après, Axl tentera un retour en 
-fanfare. Mais The Chinese Restaurant sera un flop, malgré les millions de dollars injectés dans sa création.
+fanfare. Mais *The Chinese Restaurant* sera un flop, malgré les millions de dollars injectés dans sa création.
 
 Qu'importe : Axl et Smash restent à jamais les meilleurs amis du monde et ce n'est pas 
 [un gros bide](http://images.thegauntlet.com/pics/axl-rose-canada-boris_menkevich.jpg) 
