--- a/_posts/2017-11-03-compile-ete-2017.md
+++ b/_posts/2017-11-03-compile-ete-2017.md
@@ -12,7 +12,7 @@ description: >
 uuid: 160EFD07-33FD-443A-94A6-6F8A94521310
 ---
 
-![Un Automne 2017]({{ page.cover }})
+![Un Été 2017]({{ page.cover }})
 
 Mesdames messieurs, aujourd'hui est un grand jour : outre l'anniversaire de Dirty Henry (à peine passé de quelques jours, le temps de publier sur le blog), voici qu'avec cette nouvelle livraison, les compiles Dead Rooster fêtent déjà leur première année d'existence ! ("Alors pas vraiment tu vois, ça fera vraiment un an à la 5ème compile, tu vois, théorème des poteaux et des fils de clôture tu vois ? Oui, je vois... Ta gueule !").
 
